--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-382.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.28MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.29MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇨🇳 中国-356.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇦🇺 澳大利亚-2.09MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇨🇳 中国-604.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-362.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.79MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-782.3KB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-318.4KB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
   - {name: 🇸🇬 新加坡-3.63MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-461.3KB/s(Youtube:不良林), server: 51.81.223.26, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-302.7KB/s(Youtube:不良林), server: 51.81.223.10, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.32MB/s(Youtube:不良林), server: v2.tgfaka.com, port: 8443, type: vmess, uuid: 6938c10f-c1a0-43e3-8321-099055f79853, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.tgfaka.com}}
+  - {name: 未知国家-3.32MB/s(Youtube:不良林), server: v2.tgfaka.com, port: 8443, type: vmess, uuid: 6938c10f-c1a0-43e3-8321-099055f79853, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.tgfaka.com}}
   - {name: 🇺🇸 美国-1.41MB/s(Youtube:不良林), server: v2.tgfaka.com, port: 8443, type: vmess, uuid: 00b19c02-bc00-440a-a397-faf70ac3f44e, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.tgfaka.com}}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-382.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-356.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-318.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-461.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-302.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 未知国家-3.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-382.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-356.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-318.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-461.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-302.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 未知国家-3.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,51 +52,50 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-382.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-356.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-318.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-461.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-302.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 未知国家-3.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-382.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-356.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-318.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-461.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-302.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 未知国家-3.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-382.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-356.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-318.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-461.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-302.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 未知国家-3.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -104,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-382.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-356.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-318.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-461.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-302.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 未知国家-3.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -129,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-382.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-356.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-318.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-461.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-302.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 未知国家-3.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
