--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-604.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-362.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.79MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-2.54MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇨🇳 中国-1.77MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-782.3KB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-318.4KB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-604.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.68MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-3.63MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-461.3KB/s(Youtube:不良林), server: 51.81.223.26, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-302.7KB/s(Youtube:不良林), server: 51.81.223.10, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-318.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-461.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-302.7KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-318.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-461.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-302.7KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-318.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-461.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-302.7KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-318.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-461.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-302.7KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-318.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-461.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-302.7KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-318.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-461.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-302.7KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-318.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-461.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-302.7KB/s(Youtube:不良林)
