--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.54MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
-  - {name: 🇨🇳 中国-1.77MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-782.3KB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-604.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.68MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.63MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-461.3KB/s(Youtube:不良林), server: 51.81.223.26, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-211.5KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.81MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-476.8KB/s(Youtube:不良林), server: cn02.downloadmovie.cn, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-4.67MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-347.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇺🇸 美国-302.7KB/s(Youtube:不良林), server: 51.81.223.10, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 未知国家-3.32MB/s(Youtube:不良林), server: v2.tgfaka.com, port: 8443, type: vmess, uuid: 6938c10f-c1a0-43e3-8321-099055f79853, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.tgfaka.com}}
-  - {name: 🇺🇸 美国-1.41MB/s(Youtube:不良林), server: v2.tgfaka.com, port: 8443, type: vmess, uuid: 00b19c02-bc00-440a-a397-faf70ac3f44e, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.tgfaka.com}}
+  - {name: 🇺🇸 美国-3.11MB/s(Youtube:不良林), server: v2.tgfaka.com, port: 8443, type: vmess, uuid: 6938c10f-c1a0-43e3-8321-099055f79853, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.tgfaka.com}}
+  - {name: 未知国家-3.47MB/s(Youtube:不良林), server: v2.tgfaka.com, port: 8443, type: vmess, uuid: 00b19c02-bc00-440a-a397-faf70ac3f44e, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.tgfaka.com}}
+  - {name: 🇺🇸 美国-1.81MB/s(Youtube:不良林) 2, server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇳 中国-1.68MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-461.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-211.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-302.7KB/s(Youtube:不良林)
-      - 未知国家-3.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 未知国家-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-461.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-211.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-302.7KB/s(Youtube:不良林)
-      - 未知国家-3.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 未知国家-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-461.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-211.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-302.7KB/s(Youtube:不良林)
-      - 未知国家-3.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 未知国家-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-461.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-211.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-302.7KB/s(Youtube:不良林)
-      - 未知国家-3.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 未知国家-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-461.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-211.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-302.7KB/s(Youtube:不良林)
-      - 未知国家-3.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 未知国家-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-461.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-211.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-302.7KB/s(Youtube:不良林)
-      - 未知国家-3.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 未知国家-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-604.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-461.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-211.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-302.7KB/s(Youtube:不良林)
-      - 未知国家-3.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 未知国家-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
